# SolanaPrivacyHackathon2026

./: .dockerignore  .env.example  .gitignore  ARCIUM_INTEGRATION_STATUS.md  Anchor.toml  CLAUDE.md  Cargo.toml  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  FRONTEND_INTEGRATION.md  README.md  package-lock.json  package.json  test-privacy.ts  test_poseidon.mjs  tsconfig.json
arcium-relay/: Anchor.toml  Arcium.toml  Cargo.toml  package-lock.json  package.json
arcium-relay/artifacts/: circuits_hash.txt
arcium-relay/encrypted-ixs/: Cargo.toml
arcium-relay/programs/: Cargo.toml
arcium-relay/programs/obsidian_mpc/: Cargo.toml
arcium-relay/programs/obsidian_mpc/src/: lib.rs
arcium-relay/scripts/: init-comp-defs-anchor.ts  init-comp-defs.ts
circuits/balance_proof/: Nargo.toml  Prover.toml
circuits/obsidian_batch_verifier/: Nargo.toml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: debug-search.ts  realtime-test.ts  scrape-axiom.ts  test-search.ts  test-ui.ts
frontend/src/: App.tsx  main.tsx
programs/privacy_pool/: Cargo.toml
programs/privacy_pool/src/: lib.rs
src/: index.ts
src/routes/: markets.ts  poseidon.ts  privacy.ts  prove.ts  relay.ts  verify.ts  wallets.ts
src/services/: arcium-mpc.ts  balance-merkle.ts  batch.ts  commitment.ts  database.ts  deposit-monitor.ts  dflow.ts  mcp-wallet.ts  merkle.ts  nullifier-tracker.ts  poseidon.ts  privacy-cash.ts  prover.ts  wallet.ts
src/types/: index.ts  relay.ts
src/utils/: field.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-200-HJgENBZEzyC57qTLXWNSQCNt94i4mRTYFycwgWcWCYu4.tar.zst  snapshot-300-HYM9E1bd8o2xCRJLPfHXBApFLnKVLKKkUVttc6yykZyE.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: LOG  (+9 more)
(+53 files in other folders)
