[package]
name = "privacy-pool"
version = "0.1.0"
description = "Privacy Pool - ZK Balance Proof Verification for Obsidian Relay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
light-poseidon = "0.2"
ark-bn254 = "0.4"
