[package]
name = "obsidian-mpc"
version = "0.1.0"
description = "Obsidian Relay MPC Integration - Blind Batch Execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obsidian_mpc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# Pin blake3 to avoid edition2024 requirement
blake3 = "=1.5.4"
