[package]
name = "obsidian-mpc"
version = "0.1.0"
description = "Obsidian Relay MPC Integration - Blind Batch Execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obsidian_mpc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "0.5.4"
arcium-client = { version = "0.5.4", default-features = false }
